2003-03-11  Miguel de Icaza  <miguel@ximian.com>

	* gtk/Application.cs (CurrentEvent): Property implementing the
	suggestion from Paolo.

	* glib/Object.cs (Dispose): Destructor might be invoked in a
	thread, queue the object for destruction using the Gtk idle
	handler.   We perform the real destruction of the object in the
	same thread as the Gtk+ main thread.

2003-03-14  Charles Iliya Krempeaux  <charles@reptile.ca>

	* sources/makefile : Added a "distclean" rule, so
	  that typing it will remove any source code directories,
	  and their contents.  (This works by just deleting all
	  the subdirectories.  Except for "CVS" of course.)

2003-03-14  Charles Iliya Krempeaux  <charles@reptile.ca>

	* sample/Makefile.in : Modified it to make it so "make clean"
	  will clean the "sample/rsvg" directory too.  And made it so
	  a "make distclean" will do a distclean to the "sample/rsvg"
	  too.
	* sample/rsvg/Makefile.in : Added the "distclean" rule to
	  it.

2003-03-14  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in:
	* sources/makefile:
	* sources/gtk-sharp.sources: updated for libgda/libgnomedb 0.11.

	* sources/Gda.metadata: hide GdaBatch class.

2003-03-13  Duncan Mak  <duncan@ximian.com>

	* gdk/Pixbuf.custom: Add a nice version of Gdk.Pixbuf.Pixels that
	return a 'byte *'.

	* sources/Gdk.metadata:
	* api/gdk-api.xml: Hide Gdk.Pixbuf.Pixels.

2003-03-10  Miguel de Icaza  <miguel@ximian.com>

	* gtk/Application.cs: Do not allow instances of Application to be
	created. 

	(InitCheck): new method, wraps gtk_init_check.

	Removed inline docs from here.  Put them on the documen

2003-03-08  Miguel de Icaza  <miguel@ximian.com>

	* glib/Idle.cs: Add private constructor. 

2003-03-05  Miguel de Icaza  <miguel@ximian.com>

	* gtk/Bin.cs: Add new property `Child' to GtkBin.

2003-03-06  Mike Kestner  <mkestner@speakeasy.net>

	* rsvg/Makefile.in : some -L -r magic

2003-03-03  Miguel de Icaza  <miguel@ximian.com>
