@@ -1,3 +1,14 @@
+2003-03-15  Miguel de Icaza  <miguel@ximian.com>
+
+	* sample: Update samples to new Glade.Widget.
+
+	* glade/WidgetAttribute.cs: Moved the old GladeWidgetattribute
+	here.   Now its called `Glade.WidgetAttribute'.
+	
+	* glade/GladeWidgetAttribute.cs: Removed
+
+	* glib/Idle.cs: Do not allow Idle class to be instantiated.
+
 2003-03-11  Miguel de Icaza  <miguel@ximian.com>
 
 	* gtk/Application.cs (CurrentEvent): Property implementing the
